# test-multi-opam-monorepo

./: .gitignore  README.md  a.opam  b.opam  dune-project
c/: c.opam
