opam-version: "2.0"
synopsis: "Test package"
maintainer: ["Nathan Rebours <nathan.p.rebours@gmail.com>"]
authors: ["Nathan Rebours <nathan.p.rebours@gmail.com>"]
license: "ISC"
homepage: "https://github.com/ocamllabs/opam-monorepo"
bug-reports: "https://github.com/ocamllabs/opam-monorepo/issues"
depends: [
  "dune" {>= "2.9"}
  "ocaml" {>= "4.08.0"}
  "b"
]
dev-repo: "git+https://github.com/NathanReb/test-multi-opam-monorepo.git"
build: [ "dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} ]
